--- a/cas1/index.html
+++ b/cas1/index.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cas 1</title>
   </head>
+
   <body>
     <h1>Cas 1</h1>
+    <form>
+      <label for="firstName">Name</label>
+      <input type="text" id="fname" /><br />
+      <label for="lastName">Lastname</label>
+      <input type=" text" id="lname" /><br />
+      <label for="age">Age</label>
+      <input type="number" id="age" /><br />
+      <label for="email">Password</label>
+      <input type="text" id="email" /><br />
+      <button type="button" id="btn">Save</button>
+    </form>
+
     <script src="script.js"></script>
   </body>
 </html>
