fetch image and display in html

--- a/cas3/index3.html
+++ b/cas3/index3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cas 3</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style3.css" />
   </head>
   <!-- <body>
     <h1>Cas 3</h1> -->
@@ -18,8 +18,9 @@
     <button id="sendRequest">Get Request</button>
     <button id="starWarsbtn">Get</button>
 <br>
-
-    <script src="script.js"></script>
+<button id="getDogBtn">Get Image</button>
+<br>
+    <script src="script3.js"></script>
     <script src="jquery-3.7.1.min.js"></script>
   </body>
 </html>
