--- a/cas2/index2.html
+++ b/cas2/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cas 2</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style2.css" />
   </head>
   <body>
     <!-- <h1>Cas 2</h1> -->
@@ -36,6 +36,7 @@
       </button>
     </form> -->
     <!-- 4.vjezba -->
+
     <table>
       <tr>
         <td><label for="noteTitle">Note Title:</label></td>
@@ -72,13 +73,7 @@
       </tr>
       <tr>
         <td colspan="2">
-          <button
-            type="button"
-            id="addReminder"
-            onclick="createNoteObject(event)"
-          >
-            Save
-          </button>
+          <button type="button" id="addReminder">Save</button>
         </td>
       </tr>
       <tr>
@@ -86,7 +81,7 @@
           <button
             type="button"
             id="showAllreminders"
-            onclick="displayReminders(event)"
+            onclick="showAllreminders(event)"
           >
             Display All Reminders
           </button>
@@ -94,6 +89,6 @@
       </tr>
     </table>
 
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
   </body>
 </html>
