--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -70,7 +70,16 @@
             >According to some sources...</span
           >
         </p>
-        <div id="statisticsResult"></div>
+        <div class="container text-center" id="statisticsResult">
+          <div class="row">
+            <div id="tempStatictics" class="col-md-4"></div>
+
+            <div id="humidStatistics" class="col-md-4 offset-md-4"></div>
+          </div>
+          <div class="row">
+            <div id="displayMaxMinTemp" class="col-md-6 offset-md-3"></div>
+          </div>
+        </div>
       </div>
       <div class="page">
         <h1>Hourly Data</h1>
@@ -95,6 +104,11 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <script src="src/app.js" defer></script>
+    <script
+      src="src/app.js"
+      defer
+      type="module"
+      crossorigin="chrome-untrusted"
+    ></script>
   </body>
 </html>
