minor changes in code

--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -87,10 +87,11 @@
           Here you can read the hourly weather report for the following days.
           Keep in mind that it is not actually every hour, but every 3 - 5 hours
         </p>
-        <div>
-          <table class="table">
+        <div class="container">
+          <table class="table text-center">
             <thead>
               <tr>
+                <th scope="col"></th>
                 <th scope="col">Weather</th>
                 <th scope="col">Time</th>
                 <th scope="col">Temperature</th>
